<resources>
    <string name="app_name">w6d2MenuFragments</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_settings">Settings</string>
    <string name="action_hello">Hello</string>
    <string name="action_bye">Bye</string>
    <string name="action_other">Other</string>
    <string name="action_another">Another</string>
    <string name="action_share">Share</string>
</resources>
