<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

    <item
        android:id="@+id/action_hello"
        android:title="@string/action_hello"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_bye"
        android:title="@string/action_bye"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_other"
        android:title="@string/action_other"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_another"
        android:title="@string/action_another"
        app:showAsAction="never"
        android:visible="false"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>